--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@ body {
     overflow-x: hidden;
     --light-text-color: rgba(0, 0, 0, 0.4);
     --dim-text-color: rgba(0, 0, 0, 0.7);
+    --dull-text-color: #5f6368;
 }
 
 a {
@@ -16,7 +17,20 @@ a {
 }
 
 .container {
-    max-width: 1000px;
+    max-width: 100% !important;
+    padding-bottom: 50px;
+    padding: 0 30px 0 0px !important;
+}
+
+aside {
+    position: sticky;
+    left: 0;
+    top: 40px;
+    height: 100vh;
+}
+
+main {
+    padding-left: 350px;
 }
 
 .notesHeading {
@@ -34,13 +48,43 @@ a {
     font-size: 1.3rem;
     font-weight: bold;
     color: rgba(0, 0, 0, 0.4);
-    padding: 3px 8px 5px 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border-radius: 50%;
     transition: .2s all;
     cursor: pointer;
+    min-width: 37px;
+    min-height: 37px;
+
 }
 
 .IconBtn:hover {
     background: rgba(0, 0, 0, 0.08);
     color: var(--dim-text-color);
+}
+
+.not-found {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+}
+
+@media screen and (max-width:980px) {
+    main {
+        padding-left: 280px;
+    }
+
+}
+
+@media screen and (max-width:650px) {
+    main {
+        padding-left: 0px;
+    }
+    .container {
+        padding-inline: 10px !important;
+    }
 }
