--- a/src/components/Shared/SideBar/SideBar.module.css
+++ b/src/components/Shared/SideBar/SideBar.module.css
@@ -5,6 +5,9 @@
     z-index: 10;
     top: 66px;
     transition: .2s all;
+    height: calc(100vh - 63px);
+    padding-bottom: 20px;
+    overflow: auto;
 }
 
 .list {
