--- a/src/components/Shared/Navbar/Navbar.module.css
+++ b/src/components/Shared/Navbar/Navbar.module.css
@@ -14,6 +14,8 @@
     font-size: 1.4rem;
     color: var(--dim-text-color);
     font-weight: 600;
+    user-select: none;
+    cursor: pointer;
 }
 
 .menuIcon {
