--- a/src/components/Shared/SideBar/SideBar.module.css
+++ b/src/components/Shared/SideBar/SideBar.module.css
@@ -10,8 +10,9 @@
     overflow: auto;
     overflow-x: hidden;
     transition: .3s all cubic-bezier(0.76, 0, 0.24, 1);
-}
+    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
 
+}
 .wall {
     pointer-events: none;
     background: rgba(0, 0, 0, 0.2);
@@ -26,14 +27,15 @@
 }
 
 .container::-webkit-scrollbar {
-    width: 10px;
+    width: 8px;
 }
 
 .container::-webkit-scrollbar-thumb {
     opacity: 0;
     margin-top: 20px;
     border-radius: 2rem;
-    background: rgba(0, 0, 0, 0.2);
+    background: rgba(0, 0, 0, 0.15);
+    padding: 0;
 }
 
 .container::-webkit-scrollbar-track {
@@ -43,8 +45,14 @@
 .container.close {
     width: 80px;
     padding-inline: 5px;
+    padding-left: 10px;
 }
-
+.tagsHeading{
+    transition: .2s all;
+}
+.container.close .tagsHeading{
+    margin-left: 10px !important;
+}
 .list {
     padding: 0;
     margin: 0;
@@ -64,6 +72,7 @@
     color: var(--dim-text-color);
     user-select: none;
     transition: .2s all;
+    white-space: nowrap;
 }
 
 .item.close {
