--- a/src/App.css
+++ b/src/App.css
@@ -65,7 +65,9 @@ main {
     min-height: 37px;
 
 }
-
+.trashIcon{
+    font-size: 1rem !important;
+}
 .IconBtn:hover {
     background: rgba(0, 0, 0, 0.08);
     color: var(--dim-text-color);
